// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render activity state 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={false}
      showCommentMessage={false}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render empty state 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={false}
      showCommentMessage={false}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render empty state with loading indicator 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={true}
      showCommentMessage={false}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should render approval comment form if comment submit handler is passed 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={false}
      showCommentMessage={true}
    />
  </div>
  <ApprovalCommentForm
    approverSelectorContacts={Array []}
    className="bcs-activity-feed-comment-input"
    createComment={[Function]}
    createTask={[Function]}
    getApproverContactsWithQuery={[Function]}
    getMentionContactsWithQuery={[Function]}
    isOpen={false}
    mentionSelectorContacts={Array []}
    onCancel={[Function]}
    onFocus={[Function]}
    onSubmit={[Function]}
    user={
      Object {
        "id": 10,
        "name": "Kanye West",
      }
    }
  />
</div>
`;
